# STGCN

./: .gitignore  CHANGES.md  DangXuanMinhHieu_24_presentation.tex  DangXuanMinhHieu_24_readme.md  DangXuanMinhHieu_24_report.tex  README.md  pdf_text.txt  pyproject.toml  requirements.txt
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: label_mapping.json
android/app/src/main/java/com/wlasl/stgcn/: LandmarkNormalizer.kt  MainActivity.kt  OverlayView.kt  SignInferenceManager.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/wlasl/stgcn/: NormalizerTest.kt
android_assets/: stgcn_quant.onnx
report/: main.tex  slides.tex
src/: compare_models.py  create_synthetic_data.py  dataset-metadata.json  dataset.py  evaluate.py  evaluate_lstm.py  export_model.py  generate_advanced_charts.py  generate_report_charts.py  inference_webcam.py  train.py  train_stgcn.py
src/data_processing/: 01_process_dataset.py  02_extract_landmarks.py  03_extract_msasl.py  normalization.py
src/models/: baseline_lstm.py  graph.py  stgcn.py
src/weights/: history_lstm.json  history_stgcn.json
